app/assets/stylesheets/api/profiles.scss
// Place all the styles related to the Profiles controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#main-show {
  display: flex;
  flex-direction: column;
  padding-top: 43px;
}

#cover-photo {
  margin: 0 40px;
  height: 205px;
  width: 851px;
  background-color: black;
  position: relative;
}

#profile-picture-div {
  position: absolute;
  left: 16px;
  bottom: -27px;
  background-color: #fff;
  border-radius: 3px;
  height: 168px;
  border: 1px solid #d2d6da;
}

#profile-picture{
  width: 160px;
  height: 160px;
  background: lightgray;
  border: 4px solid #fff;
  border-radius: 2px;
  cursor: pointer;
}

#profile-nav {
  display: flex;
  margin: 0 40px;
  height: 43px;
  width: 648px;
  background-color: white;
  padding-left: 201px;
  border: 1px solid #d2d6da;
  font-family: arial;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

#profile-nav a {
  border-right: 1px solid #e9eaed;
  float: left;
  font-size: 14px;
  font-weight: bold;
  height: 43px;
  line-height: 3.05;
  padding: 0 17px;
  position: relative;
  vertical-align: middle;
  white-space: nowrap;
  color: #365899;
  cursor: pointer;
  text-decoration: none;
}

#profile-nav a:first-of-type {
  border-left: 1px solid #e9eaed;
}

#main-about {
  min-height: 350px;
  width: 849px;
  margin: 15px 40px;
  background-color: #fff;
  border: 1px solid #d2d6da;
  border-radius: 3px;
}

#main-about-title {
  height: 29px;
  padding: 16px 0 12px 0;
  border-bottom: 1px solid #d2d6da;
  background-color: #f6f7f9;
}

#main-about-title a {
  color: #4b4f56;
  font-size: 20px;
  font-weight: bold;
  vertical-align: middle;
  cursor: pointer;
  text-decoration: none;
  margin-left: 40px;
}

#main-about-content {
  display: flex;
}

#main-about-content ul {
  list-style: none;
}

#main-about-content li {
  padding: 20px;
  align-items: center;
  border-bottom: 1px solid #d2d6da;
  width: 325px;
  font-size: 16px;
  color: #8f949b;
}

#about-categories {
  display: flex;
  flex-direction: column;
  border-right: 1px solid #d2d6da;
  width: 240px;
  min-height: 280px;
  padding-top: 10px;
}

#about-categories a{
  font-size: 14px;
  height: 42px;
  line-height: 3.05;
  padding: 0 17px;
  position: relative;
  vertical-align: middle;
  white-space: nowrap;
  color: #8f949b;
  cursor: pointer;
  text-decoration: none;
}

.about-details {
  display: flex;
  flex-direction: column;
}

.about-details label {
  margin: 20px;
  font-size: 14px;
  border-bottom: 1px solid #d2d6da;
  padding-bottom: 5px;
  width: 560px;
  color: #8f949b;
  font-weight: bold;
}

.about-details span {
  margin-left: 20px;
  color: #8f949b;
}

